removed invalid characters

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
   <p id="phraseFrench"></p>
   <p id="phraseEnglish"></p>
   <div id="navButtons">
-    <button id="prevPhraseBtn" disabled>?? Previous</button>
-    <button id="nextPhraseBtn" disabled>Next ??</button>
+    <button id="prevPhraseBtn" disabled>Previous</button>
+    <button id="nextPhraseBtn" disabled>Next</button>
   </div>
-  <button id="playPhraseBtn">?? Play Phrase</button>
+  <button id="playPhraseBtn">Play Phrase</button>
 </div>
 
 <div id="recordingSection" style="display:none;">
