--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <base href="/tefinitely/">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>TEF Canada Section A Practice</title>
+<title>TEF Canada Training</title>
 <link rel="stylesheet" href="css/toast.css">
 <style>
   body {
