--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </div>
 
 <div id="main-content" style="display: none;">
-    <h1>TEF Canada - Section A Practice</h1>
+    <h1>TEF Canada - Training</h1>
 
     <div id="controls">
       <label for="topicSelect">Select Topic:</label><br />
