--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </div>
 
     <div id="recordingSection" style="display:none;">
-      <button id="startRecordBtn">Start Recording</button>
+      <button id="startRecordBtn">Speak</button>
       <audio id="userAudio" controls style="display:none;"></audio>
       <p id="recordingResult"></p>
     </div>
