--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
     });
     const ratio = matchCount / targetWords.length;
     if (ratio > 0.6) {
-      recordingResult.textContent = 'Good pronunciation! ??';
+      recordingResult.textContent = 'Good pronunciation!';
       recordingResult.style.color = 'green';
     } else {
       recordingResult.textContent = 'Pronunciation could be improved. Try again.';
