Fix speech recognition alert and update send function

--- a/practise/index.html
+++ b/practise/index.html
@@ -115,4 +115,30 @@ function sendText() {
 
 function startSpeech() {
   if (!recognition) {
-    alert("Spee
+    alert("Speech recognition not supported in this browser.");
+    return;
+  }
+  recognition.start();
+}
+
+async function send(text) {
+  document.getElementById('chat').innerHTML +=
+    `<div class="user">${text}</div>`;
+
+  const res = await fetch('api/continue_session.php', {
+    method: 'POST',
+    headers: {'Content-Type': 'application/x-www-form-urlencoded'},
+    body: 'text=' + encodeURIComponent(text)
+  });
+
+  const data = await res.json();
+
+  document.getElementById('chat').innerHTML +=
+    `<div class="assistant">${data.assistant}</div>`;
+
+  speak(data.assistant);
+}
+</script>
+
+</body>
+</html>
