Remove duplicate assistant message insertion
Removed duplicate code for adding assistant message.

--- a/practise/index.html
+++ b/practise/index.html
@@ -141,8 +141,8 @@ async function send(text) {
   document.getElementById('chat').innerHTML +=
     `<div class="assistant">${data.assistant}</div>`;
 
-document.getElementById('chat').innerHTML +=
-  `<div class="assistant">${data.assistant}</div>`;
+// document.getElementById('chat').innerHTML +=
+//   `<div class="assistant">${data.assistant}</div>`;
 
 if (data.suggestion) {
   document.getElementById('chat').innerHTML +=
