--- a/practise/index.html
+++ b/practise/index.html
@@ -2,156 +2,101 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>French Speaking Practice</title>
-
+<title>French Conversation Practice</title>
 <style>
-body {
-  font-family: Arial, sans-serif;
-  max-width: 800px;
-  margin: auto;
-}
-
-#chat div {
-  margin: 10px 0;
-}
-
-.assistant {
-  color: #1e40af;
-}
-
-.user {
-  color: #166534;
-}
-
-button {
-  margin: 5px;
-}
-  .suggestion {
-  color: #6b7280;
-  font-size: 0.9em;
-  margin-left: 10px;
-}
+body { font-family: sans-serif; max-width: 600px; margin: 20px auto; }
+#chat { max-height: 400px; overflow-y: auto; border: 1px solid #ccc; padding: 10px; margin-bottom: 10px; }
+.user { text-align: right; color: blue; margin: 5px; }
+.assistant { text-align: left; color: green; margin: 5px; }
+.suggestion { text-align: left; color: gray; font-style: italic; margin: 3px; }
+#input-area { display: flex; }
+#user-input { flex: 1; padding: 5px; font-size: 1em; }
+#send-btn { padding: 5px 10px; font-size: 1em; }
 </style>
 </head>
 <body>
 
-<h2>French Speaking Practice</h2>
+<h1>French Conversation Practice</h1>
 
-<label>Niveau:</label>
-<select id="level">
-  <option value="A1">A1</option>
-  <option value="A2">A2</option>
-  <option value="B1">B1</option>
-</select>
-
-<button onclick="startSession()">Start</button>
-
-<hr>
-
-<div id="scenario"></div>
 <div id="chat"></div>
 
-<hr>
-
-<input id="textInput" placeholder="Votre réponse..." style="width:70%">
-<button onclick="sendText()">Send</button>
-<button onclick="startSpeech()">🎤 Speak</button>
+<div id="input-area">
+    <input type="text" id="user-input" placeholder="Tapez votre phrase ici..." autofocus />
+    <button id="send-btn">Envoyer</button>
+</div>
 
 <script>
-/* -----------------------
-   Speech recognition
------------------------- */
-const SpeechRecognition =
-  window.SpeechRecognition || window.webkitSpeechRecognition;
+const chatContainer = document.getElementById('chat');
+const inputField = document.getElementById('user-input');
+const sendButton = document.getElementById('send-btn');
 
-let recognition = null;
-if (SpeechRecognition) {
-  recognition = new SpeechRecognition();
-  recognition.lang = 'fr-FR';
-  recognition.interimResults = false;
-
-  recognition.onresult = (event) => {
-    const text = event.results[0][0].transcript;
-    send(text);
-  };
+function appendMessage(role, text) {
+    const div = document.createElement('div');
+    div.className = role; // 'user', 'assistant', 'suggestion'
+    div.innerHTML = text;
+    chatContainer.appendChild(div);
+    chatContainer.scrollTop = chatContainer.scrollHeight;
 }
 
-/* -----------------------
-   Speech synthesis
------------------------- */
 function speak(text) {
-  const utterance = new SpeechSynthesisUtterance(text);
-  utterance.lang = 'fr-FR';
-  speechSynthesis.speak(utterance);
+    if ('speechSynthesis' in window && text) {
+        const utter = new SpeechSynthesisUtterance(text);
+        utter.lang = 'fr-FR';
+        speechSynthesis.speak(utter);
+    }
 }
 
-/* -----------------------
-   Session start
------------------------- */
-async function startSession() {
-  const level = document.getElementById('level').value;
-
-  const res = await fetch('api/start_session.php', {
-    method: 'POST',
-    headers: {'Content-Type': 'application/x-www-form-urlencoded'},
-    body: 'level=' + level
-  });
-
-  const data = await res.json();
-
-  document.getElementById('scenario').innerHTML =
-    `<strong>Scenario:</strong> ${data.scenario}`;
-
-  document.getElementById('chat').innerHTML =
-    `<div class="assistant">${data.assistant}</div>`;
-
-  speak(data.assistant);
+async function startSession(level = 'A2') {
+    // Call start_session.php to get scenario and first assistant line
+    const res = await fetch('api/start_session.php', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/x-www-form-urlencoded'},
+        body: 'level=' + encodeURIComponent(level)
+    });
+    const data = await res.json();
+    if (data.scenario) {
+        appendMessage('suggestion', `<em>Scénario: ${data.scenario}</em>`);
+    }
+    if (data.assistant) {
+        appendMessage('assistant', data.assistant);
+        speak(data.assistant);
+    }
 }
 
-/* -----------------------
-   Send user input
------------------------- */
-function sendText() {
-  const text = document.getElementById('textInput').value;
-  if (!text) return;
-  send(text);
-  document.getElementById('textInput').value = '';
+async function sendMessage() {
+    const text = inputField.value.trim();
+    if (!text) return;
+    appendMessage('user', text);
+    inputField.value = '';
+
+    const res = await fetch('api/continue_session.php', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/x-www-form-urlencoded'},
+        body: 'text=' + encodeURIComponent(text)
+    });
+
+    const data = await res.json();
+
+    if (data.assistant) {
+        appendMessage('assistant', data.assistant);
+        speak(data.assistant);
+    }
+
+    if (data.suggestion) {
+        appendMessage('suggestion', `<em>${data.suggestion}</em>`);
+    }
 }
 
-function startSpeech() {
-  if (!recognition) {
-    alert("Speech recognition not supported in this browser.");
-    return;
-  }
-  recognition.start();
-}
+// Send on button click
+sendButton.addEventListener('click', sendMessage);
 
-async function send(text) {
-  document.getElementById('chat').innerHTML +=
-    `<div class="user">${text}</div>`;
+// Send on Enter key
+inputField.addEventListener('keypress', e => {
+    if (e.key === 'Enter') sendMessage();
+});
 
-  const res = await fetch('api/continue_session.php', {
-    method: 'POST',
-    headers: {'Content-Type': 'application/x-www-form-urlencoded'},
-    body: 'text=' + encodeURIComponent(text)
-  });
-
-  const data = await res.json();
-
-  document.getElementById('chat').innerHTML +=
-    `<div class="assistant">${data.assistant}</div>`;
-
-// document.getElementById('chat').innerHTML +=
-//   `<div class="assistant">${data.assistant}</div>`;
-
-if (data.suggestion) {
-  document.getElementById('chat').innerHTML +=
-    `<div class="suggestion"><em>Suggestion: ${data.suggestion}</em></div>`;
-}
-
-// Speak ONLY dialogue
-speak(data.assistant);
-}
+// Start session automatically on page load
+startSession('A2');
 </script>
 
 </body>
